Inicio da página principal

--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<html>
-    
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--CSS-->
+    <link href="css/mystyle.css" rel="stylesheet">
+
+    <title>Teste de Conhecimentos</title>
+</head>
+<body>
+    <div id="rectangle">
+        <div id="title">
+            <h1>Teste de Conhecimentos</h1>
+        </div>
+    </div>
+</body>
 </html>
