--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div id="question_two">
-        <h3>02. Quando é 2 + 2?</h3>
+        <h3>02. Quando é 4 + 2?</h3>
         <form id="radio_two">
             <br>
             <input type="radio" name="option" value="2">
@@ -68,7 +68,7 @@
     </div>
     
     <div id="question_three">
-        <h3>03. Quando é 2 + 2?</h3>
+        <h3>03. Quando é 6 - 2?</h3>
         <form id="radio_three">
             <br>
             <input type="radio" name="option" value="2">
@@ -196,6 +196,15 @@
         </form>
     </div>
 
+    <div id="div_submit">
+        <button type="submit" id="btn_submit" name="btn_submit" onclick="Resultado(),CalcularResultado()"></button>
+        <h3>Enviar</h3>
+    </div>
 
+    <div id="div_cancel">
+        <a id="cancel" href="index.html">Cancelar</a>
+    </div>
+
+    <script type="text/javascript" src="js/submit.js"></script>
 </body>
 </html>
