Feito a lógica para criar o gráfico, a mensagem de aprovado e início da página resultado.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <h3>01. Quando é 2 + 2?</h3>
         <form id="radio_one">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_math_one" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_math_one" name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_math_one" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
@@ -52,13 +52,13 @@
         <h3>02. Quando é 4 + 2?</h3>
         <form id="radio_two">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_math_two" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_math_two" name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_math_two" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
@@ -71,13 +71,13 @@
         <h3>03. Quando é 6 - 2?</h3>
         <form id="radio_three">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_math_three" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_math_three" name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_math_three" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
@@ -90,13 +90,13 @@
         <h3>01. Quando é 4 + 2?</h3>
         <form id="radio_four">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_history_one" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_history_one" name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_history_one" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
@@ -109,13 +109,13 @@
         <h3>02. Quando é 4 + 2?</h3>
         <form id="radio_five">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_history_two" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_history_two" name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_history_two" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
@@ -128,13 +128,13 @@
         <h3>03. Quando é 4 + 2?</h3>
         <form id="radio_six">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_history_three" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_history_three" name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_history_three" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
@@ -147,13 +147,13 @@
         <h3>01. Quando é 4 + 2?</h3>
         <form id="radio_seven">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_geography_one" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_geography_one" name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_geography_one" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
@@ -166,13 +166,13 @@
         <h3>02. Quando é 4 + 2?</h3>
         <form id="radio_eight">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_geography_two" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_geography_two"  name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_geography_two" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
@@ -185,19 +185,21 @@
         <h3>03. Quando é 4 + 2?</h3>
         <form id="radio_nine">
             <br>
-            <input type="radio" name="option" value="2">
+            <input type="radio" class="option_geography_three" name="option" value="1">
             <label id="lbl_one">2</label>
             <br><br>
-            <input type="radio" name="option" value="4">
+            <input type="radio" class="option_geography_three"  name="option" value="2">
             <label id="lbl_two">4</label>
             <br><br>
-            <input type="radio" name="option" value="6">
+            <input type="radio" class="option_geography_three" name="option" value="3">
             <label id="lbl_three">6</label>
         </form>
     </div>
 
+    
     <div id="div_submit">
-        <button type="submit" id="btn_submit" name="btn_submit" onclick="Resultado(),CalcularResultado()"></button>
+        <button type="submit" id="btn_submit" name="btn_submit" onclick="CalcularResultadoMatematica(), 
+        CalcularResultadoHistoria(), CalcularResultadoGeografia(), montarGrafico(), calcularPontuacao(), mensagemResultado()"></button>
         <h3>Enviar</h3>
     </div>
 
@@ -205,6 +207,16 @@
         <a id="cancel" href="index.html">Cancelar</a>
     </div>
 
+    <div id="grafico">
+        <canvas id="myChart"></canvas>
+    </div>
+
+    <div id="mensagemResultado">
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js" ></script>
+    <!--<script src="js/grafico.js"></script>-->
     <script type="text/javascript" src="js/submit.js"></script>
 </body>
 </html>
