--- a/html/resultado.html
+++ b/html/resultado.html
@@ -12,20 +12,39 @@
 
     <title>Teste de Conhecimentos</title>
 </head>
-<body>
-    <div id="rectangle">
+<body onload="montarGrafico(); mensagemResultado()">
+    <div id="retangulo_cinco">
+    </div>
+    <div id="mensagemResultado">
 
     </div>
-
     <div>
         <h1>Teste de Conhecimentos</h1>
     </div>
 
     <div id="rectangle_two">
+    </div>
 
+    <div id="grafico">
+        <canvas id="myChart"></canvas>
     </div>
     
+    <div id="mensagem_um">
+        <h2>O teste vale 100 pontos, e a nota necessária é 70.</h2>
+    </div>
    
+    <div id="gabarito">
+        <button type="submit" id="btn_gabarito" name="btn_gabarito" onclick=""></button>
+        <h3>Ver Gabarito</h3>
+    </div>
+
+    <div id="mensagem_dois">
+        <h2>Em breve entraremos em contato para a próxima fase. Obrigado!</h2>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js" ></script>
+    
+    <script src="../js/submit.js"></script>
 
 </body>
 </html>
