--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
     <div id="rectangle">
-
+        <div id="grafico">
+            <canvas id="myChart"></canvas>
+        </div>
     </div>
 
     <div>
@@ -195,11 +197,11 @@
             <label id="lbl_three">6</label>
         </form>
     </div>
-
     
     <div id="div_submit">
-        <button type="submit" id="btn_submit" name="btn_submit" onclick="CalcularResultadoMatematica(), 
-        CalcularResultadoHistoria(), CalcularResultadoGeografia(), montarGrafico(), calcularPontuacao(), mensagemResultado()"></button>
+        <button type="submit" id="btn_submit" name="btn_submit" onclick="Resultado(), CalcularResultadoMatematica(); 
+        CalcularResultadoHistoria(); CalcularResultadoGeografia(); calcularPontuacao(); 
+        armazenarAcertos(); lerAcertos(); montarGrafico()"></button>
         <h3>Enviar</h3>
     </div>
 
@@ -207,16 +209,7 @@
         <a id="cancel" href="index.html">Cancelar</a>
     </div>
 
-    <div id="grafico">
-        <canvas id="myChart"></canvas>
-    </div>
-
-    <div id="mensagemResultado">
-
-    </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js" ></script>
-    <!--<script src="js/grafico.js"></script>-->
     <script type="text/javascript" src="js/submit.js"></script>
 </body>
 </html>
