Finalizado gráfico, mensagem de resultado.

--- a/html/resultado.html
+++ b/html/resultado.html
@@ -12,14 +12,13 @@
 
     <title>Teste de Conhecimentos</title>
 </head>
-<body onload="lerAcertos(), montarGrafico(); mensagemResultado()">
+<body onload="lerValores(), montarGrafico(); mensagemResultado()">
     <div id="retangulo_cinco">
         <div id="grafico">
             <canvas id="myChart"></canvas>
         </div>
     </div>
     <div id="mensagemResultado">
-
     </div>
     <div>
         <h1>Teste de Conhecimentos</h1>
