--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' />
     
-
-    
     <!--CSS-->
     <link href="css/mystyle.css" rel="stylesheet">
 
@@ -201,7 +199,7 @@
     <div id="div_submit">
         <button type="submit" id="btn_submit" name="btn_submit" onclick="Resultado(), CalcularResultadoMatematica(); 
         CalcularResultadoHistoria(); CalcularResultadoGeografia(); calcularPontuacao(); 
-        armazenarAcertos(); lerAcertos(); montarGrafico()"></button>
+        armazenarValores(); lerValores(); montarGrafico()"></button>
         <h3>Enviar</h3>
     </div>
 
