--- a/html/resultado.html
+++ b/html/resultado.html
@@ -24,17 +24,15 @@
         <h1>Teste de Conhecimentos</h1>
     </div>
 
-    <div id="rectangle_two">
+    <div id="retangulo_dois">
     </div>
 
-    
-    
     <div id="mensagem_um">
-        <h2>O teste vale 100 pontos, e a nota necessária é 70.</h2>
+        <h2>O teste vale 9 pontos, e a nota necessária é 6.</h2>
     </div>
    
     <div id="gabarito">
-        <button type="submit" id="btn_gabarito" name="btn_gabarito" onclick=""></button>
+        <button type="submit" id="btn_gabarito" name="btn_gabarito" onclick="apresentarGabarito()"></button>
         <h3>Ver Gabarito</h3>
     </div>
 
