--- a/html/resultado.html
+++ b/html/resultado.html
@@ -18,13 +18,14 @@
             <canvas id="myChart"></canvas>
         </div>
     </div>
-    <div id="mensagemResultado">
-    </div>
     <div>
         <h1>Teste de Conhecimentos</h1>
     </div>
 
     <div id="retangulo_dois">
+    </div>
+
+    <div id="mensagemResultado">
     </div>
 
     <div id="mensagem_um">
@@ -43,6 +44,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js" ></script>
     
     <script src="../js/submit.js"></script>
+    <script src="../js/gabarito.js"></script>
 
 </body>
 </html>
