Revisão dos arquivos. Finalização do código.

--- a/html/resultado.html
+++ b/html/resultado.html
@@ -21,11 +21,9 @@
         <h1>Teste de Conhecimentos</h1>
     </div>
 
-    <div id="retangulo_dois">
-    </div>
+    <div id="retangulo_dois"></div>
 
-    <div id="mensagemResultado">
-    </div>
+    <div id="mensagemResultado"></div>
 
     <div id="mensagem_um">
         <h2>O teste vale 9 pontos, e a nota necessária é 6.</h2>
